fix: fixing page overflow on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,6 @@ body {
 
 .container-wrapper {
   max-width: 1366px;
-  width: 100%;
   margin: 0 auto;
 
   display: flex;
@@ -140,7 +139,6 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
-
 
   margin-top: 26px;
   margin-bottom: 100px;
